# alphadep

./: Cargo.toml  build.rs
.run/: alphadep.toml
runtime/: Cargo.toml
runtime-wrapper/: Cargo.toml
runtime-wrapper/src/: main.rs
src/: lib.rs  main.rs
src/configuration/: deployment.rs  machine.rs  mod.rs  project.rs  runtime.rs
src/deployment/: mod.rs
src/machine/: mod.rs  ssh.rs
src/runtime/: interface.rs  mod.rs
